--- a/index.html
+++ b/index.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Document</title>
-</head>
-<body>
-  <div id="react">React not on yet</div>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title>BootName</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
+    <link rel="stylesheet" media="all" href="http://bootname.com/assets/ex/application-63ec2063759c8f65a795c9c2fd3868ec6ccefa809342b2e0f3635ba560d5bb09.css" data-turbolinks-track="false" />
+    <link rel="stylesheet" media="all" href="http://bootname.com/assets/application-32b2997455a514350872a997e4f34fafaca46ad3d4375c5fbe41ee6583bd1d1c.css" data-turbolinks-track="false" />
+  </head>
+  <body>
+    <div id="react" class="container">React not working yet</div>
 
-  <script src="build/bundle.js"></scrit>
-</body>
+    <script src="build/bundle.js"></script>
+  </body>
 </html>
